--- a/css/style.css
+++ b/css/style.css
@@ -79,12 +79,12 @@ body {
 
 /* Start Header */
 
-/* .header {
+.header {
   position: fixed;
   z-index: 1000;
   background-color: white;
   width: 100%;
-} */
+}
 
 .header .container {
   display: flex;
