I modified (index.html)&(style.css)
In (index.html) file i just changed the place of (normalize.css) calling
to above the (style.css) calling.

In (style.css) file i changed the height in landing (line:155)
from ( height: calc(100vh - 68px); ) to (height: 100vh;)

--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ body {
 .landing {
   background-image: url(../images/Mountain.jpg);
   background-size: cover;
-  height: calc(100vh - 68px);
+  height: 100vh;
   position: relative;
 }
 
